<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/redSlider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/widgets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <RadioGroup
                android:id="@+id/featurechooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/skinradiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skinbutton" />

                <RadioButton
                    android:id="@+id/eyeradiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eyebutton" />

                <RadioButton
                    android:id="@+id/hairradiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hairbutton" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/redLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RedSliderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RedSlider" />

                <SeekBar
                    android:id="@+id/redslider"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:max="255" />

                <TextView
                    android:id="@+id/rednumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/greenlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/greenslidertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/GreenSlider" />

                <SeekBar
                    android:id="@+id/greenslider"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:max="255" />

                <TextView
                    android:id="@+id/greennumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bluelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/blueslidertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/BlueSlider" />

                <SeekBar
                    android:id="@+id/blueslider"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:max="255" />

                <TextView
                    android:id="@+id/bluenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/featurInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <LinearLayout
                android:id="@+id/hairtextlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/hairChooser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hairChooser" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hairspinnerlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/hairSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
             </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="332dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/randomizeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomButton" />
        </LinearLayout>

        <com.example.facemaker.Face
            android:id="@+id/notePad"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>